# Olio-ohjelmointi

Harjoitus5/: AggregationA.cpp  AggregationA.h  AssosiationA.cpp  AssosiationA.h  Harjoitus5.pro  classB.cpp  classB.h  main.cpp
Kotitehtava2_oliot/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
Kotitehtava4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
Kotitehtava6a/: main.cpp  myclass.cpp  myclass.h
Kotitehtava6b/: Kotitehtava6b.pro  exampleclass.cpp  exampleclass.h
Kotitehtava7/: mainwindow.cpp  mainwindow.h
Oliot_kotitehtava1/: CMakeLists.txt  Functions.cpp
kotitehtava2b_oliot/: car.cpp  car.h  kotitehtava2b_oliot.pro
kotitehtava3b/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  main.cpp
viikkotehtava3_1/: CMakeLists.txt  Chef.cpp  Chef.h  italianchef.cpp  italianchef.h  main.cpp
